Helogen in front small bumper

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <body>
         <div class="car carOut">
             <div class="carBody">
-                <div class="body"></div>
+                <div class="body">
+                    <div class="frontSmallBumper"></div>
+                    <div class="frontBumperHalogen">
+                        <span class="halogenLight"></span>
+                    </div>
+                </div>
                 <div class="roofFront"></div>
                 <div class="roofBack"></div>
                 <div class="roofMiddle"></div>
@@ -22,11 +27,11 @@
                 <div class="wheel position">
                     <div class="tire position rotate">
                         <div class="rim position">
-                            <div class="rimCircle1"></div>
-                            <div class="rimCircle2"></div>
-                            <div class="rimCircle3"></div>
-                            <div class="rimCircle4"></div>
-                            <div class="rimCircle5"></div>
+                            <span class="rimCircle1"></span>
+                            <span class="rimCircle2"></span>
+                            <span class="rimCircle3"></span>
+                            <span class="rimCircle4"></span>
+                            <span class="rimCircle5"></span>
                             <div class="brakes position">
                                 <div class="brakes1 position">
                                     <div class="brakes2 position">
@@ -35,11 +40,11 @@
                                                 <div class="pentagon_up"></div>
                                                 <div class="pentagon_down"></div>
                                                 <div class="hub position">
-                                                    <div class="screw1"></div>
-                                                    <div class="screw2"></div>
-                                                    <div class="screw3"></div>
-                                                    <div class="screw4"></div>
-                                                    <div class="screw5"></div>
+                                                    <span class="screw1"></span>
+                                                    <span class="screw2"></span>
+                                                    <span class="screw3"></span>
+                                                    <span class="screw4"></span>
+                                                    <span class="screw5"></span>
                                                     <div class="bearing1">
                                                         <div class="bearing2"></div>
                                                     </div>
@@ -60,12 +65,12 @@
                 <div class="wheel position">
                     <div class="tire position rotateBack">
                         <div class="rim position">
-                            <div class="rimCircle1"></div>
-                            <div class="rimCircle2"></div>
-                            <div class="rimCircle3"></div>
-                            <div class="rimCircle4"></div>
-                            <div class="rimCircle5"></div>
-                            <div class="brakes position">
+                            <span class="rimCircle1"></span>
+                            <span class="rimCircle2"></span>
+                            <span class="rimCircle3"></span>
+                            <span class="rimCircle4"></span>
+                            <span class="rimCircle5"></span>
+                            <span class="brakes position">
                                 <div class="brakes1 position">
                                     <div class="brakes2 position">
                                         <div class="brakes3 position">
@@ -73,11 +78,11 @@
                                                 <div class="pentagon_up"></div>
                                                 <div class="pentagon_down"></div>
                                                 <div class="hub position">
-                                                    <div class="screw1"></div>
-                                                    <div class="screw2"></div>
-                                                    <div class="screw3"></div>
-                                                    <div class="screw4"></div>
-                                                    <div class="screw5"></div>
+                                                    <span class="screw1"></span>
+                                                    <span class="screw2"></span>
+                                                    <span class="screw3"></span>
+                                                    <span class="screw4"></span>
+                                                    <span class="screw5"></span>
                                                     <div class="bearing1">
                                                         <div class="bearing2"></div>
                                                     </div>
@@ -86,7 +91,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </span>
                         </div>
                     </div>
                 </div>
