front car almost done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
         <section class="car carOut">
             <div class="carBody">
                 <div class="body">
+                    <strong id="hoodLine"></strong>
+                    <strong id="hoodLine2"></strong>
+                    <strong id="bumperLine"></strong>
+                    <span class="licensePlate"></span>
+                    <div class="frontReflector">
+                        <div class="frontReflector2">
+                            <span id="frontBulb1"></span>
+                            <span id="frontBulb2">
+                                <strong id="finger"></strong>
+                                <span id="bulb1" class="frontBulb"></span>
+                                <span id="bulb2" class="frontBulb"></span>
+                                <span id="bulb3" class="frontBulb"></span>
+                            </span>
+                        </div>
+                        <strong id="brow"></strong>
+                        <strong id="brow2"></strong>
+                    </div>
                     <div class="frontSmallBumper"></div>
                     <div class="frontBumperHalogen">
                         <span class="halogenLight"></span>
