--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                     <strong id="hoodLine"></strong>
                     <strong id="hoodLine2"></strong>
                     <strong id="bumperLine"></strong>
+                    <strong id="HoodLine"></strong>
+                    <strong id="HoodLine2"></strong>
+                    <span id="blinker"></span>
                     <span class="licensePlate"></span>
                     <div class="frontReflector">
                         <div class="frontReflector2">
