animations with all front done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             <div class="carBody">
                 <div class="body">
                     <strong id="hoodLine"></strong>
-                    <strong id="hoodLine2"></strong>
                     <strong id="bumperLine"></strong>
                     <strong id="HoodLine"></strong>
                     <strong id="HoodLine2"></strong>
@@ -43,13 +42,25 @@
                     <div class="doorStep"></div>
                     <div class="doorStep2"></div>
                 </div>
-                <div class="roofFront"></div>
+                <div class="roofFront">
+                    <div class="ventilation">
+                        <span class='firstWiperHolder'>
+                            <span class='firstWiper'></span>
+                        </span>
+                        <span class='secondWiperHolder'>
+                            <span class='secondWiper'></span>
+                        </span>
+                    </div>
+                </div>
                 <div class="roofBack"></div>
                 <div class="roofMiddle"></div>
                 <div class="trunk"></div>
                 <div class="backBumper"></div>
             </div>
             <div id="rear_wheel">
+                <div class="mudguardShadow">
+                    <strong id="hoodLine2"></strong>
+                </div>
                 <div class="mudguard mudguardFront"></div>
                 <div class="wheel position">
                     <div class="tire position rotate">
